# s3-sync-deploy-action

./: .eslintrc.yml  .npmignore  LICENSE  README.md  package.json  pyproject.toml
.github/workflows/: publish.yml
lib/: index.ts
src/: index.py
test/: s3-sync-deploy-action.test.ts
test_src/: test_handler.py
