[tool.poetry]
name = "s3-sync-deploy-action"
version = "0.1.0"
description = ""
authors = []
packages = [{ include = "*", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.38"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
aws-lambda-typing = "^2.16.3"
moto = {extras = ["s3"], version = "^4.0.12"}
black = "^22.12.0"

[tool.pytest.ini_options]
testpaths = ["test_src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
